--- a/teenkiri/src/main/resources/application.yml
+++ b/teenkiri/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-
+server:
+  port: 8088
 spring:
   mvc:
     pathmatch:
@@ -7,7 +8,7 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3307/teenkiri
+    url: jdbc:mariadb://localhost:3306/teenkiri
     username: root
     password: 1234
 
