--- a/teenkiri/src/main/resources/application.yml
+++ b/teenkiri/src/main/resources/application.yml
@@ -17,5 +17,5 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
