feat : 강의 세팅 및 강의 생성 기능, 파일 최대 크기 5GB 설정

--- a/teenkiri/src/main/resources/application.yml
+++ b/teenkiri/src/main/resources/application.yml
@@ -19,3 +19,8 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+  servlet:
+    multipart:
+      maxFileSize: 5120MB # 최대 5GB
+      maxRequestSize: 5120MB # 최대 5GB
