chore: key issue

--- a/code/teenkiri/src/main/resources/application.yml
+++ b/code/teenkiri/src/main/resources/application.yml
@@ -58,3 +58,12 @@ logging:
     name: application.log
 
 # aws s3 설정
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY_ID}
+      secret-key: ${AWS_SECRET_ACCESS_KEY}
+    region:
+      static:
+    s3:
+      bucket:
