--- a/code/teenkiri/src/main/resources/application.yml
+++ b/code/teenkiri/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8081
 spring:
   mvc:
     pathmatch:
@@ -16,7 +16,7 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
   servlet:
@@ -27,10 +27,10 @@ spring:
 
   # Email settings
   mail:
-    host: smtp.google.com
+    host: smtp.gmail.com
     port: 587
     username: dldpsk122212@gmail.com
-    password: phlj naoz tbmo aidz
+    password: vyqe nknv urcj rtyl
     properties:
       mail:
         transport:
